
- The shortcut to create a new file in the VFSBrowser is now ctrl+n instead of
  just 'n' (#1965114) (Matthieu Casanova)

- Some NPE fixed in status bar widgets when the view do not have a textArea yet
  (#1965532) (Matthieu Casanova)

- VFSFileChooserDialog: back-arrow in filename textbox used to go up a
  directory, but was also used for going back a space in the text field.
  Disabled that behavior, and added shortcuts "A+Up" to go up a dir, 
  A+Left and A+Right to go back and forward in the directory stack. 
  These also work the dockable VFSBrowser. (#1694133 - Alan Ezust)

- New Action: Scroll-And-Center-Caret Action.
  Restored previous behavior of center-caret-on-screen.
  (# 1910061 - Alan Ezust)

- A NPE was happened when loading several buffers at the same time and if the
  collapseFold bufferlocal property is set to something else than 0
  (#1982663) (Matthieu Casanova)

}}}
{{{ Miscellaneous

- In the auto-indent code, use read-only "CharSequence" instances to avoid
  creating new strings (which results in a copy of the original data). This
  should reduce a little the memory usage of that code. Also change some other
  code that can avoid the user of strings (such as the word completion action).
  (Marcelo Vanzin)

- New status bar ErrorWidget added to display the 10 last exceptions that
  happened in jEdit (Matthieu Casanova)

- Toolbar and context menu can now be restored to default setting
  (Seph M. Soliman - #1961989)

- New BufferSet api. The EditPanes can now manage their own list of buffers,
  or share this list with the editpanes from the same view, and of course as
  usual share the same list between all EditPanes (the default behavior)
  A bufferSet widget is available for the status bar
  (Matthieu Casanova)

- New text macro "Line_Filter.bsh" added. It can filter the lines of a buffer
  to remove the lines that match or do not match a char sequence (patch #1981501)
  (Robert Schwenn)

- New Mac OS X application icon (Seph M. Soliman)
